# 2023_aoc

./: pyproject.toml  pytest.ini
aoc_23/: day_00.py  day_01.py  day_02.py  load_data.py
test_data/: 01.txt
tests/: test_day_01.py  test_day_02.py
