[tool.poetry]
name = "2023-aoc"
version = "0.1.0"
description = ""
authors = ["Nik <hi@nik.codes>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
requests = "^2.31.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
